<resources>
    <string name="app_name" translatable="false">carr App</string>
    <string name="label">DriveNext</string>
    <string name="sub_label">Поможем найти твою следующую поездку</string>
    <string name="start_logo">StartLogo</string>
    <string name="disconnect">Disconnect</string>
    <string name="no_connection">Нет подключения к интернету</string>
    <string name="please_retry">Проверьте подключение и повторите попытку</string>
    <string name="retry">Повторить попытку</string>
    <string name="miss">Пропустить</string>
    <string name="sharing_logo">SharingLogo</string>
    <string name="logIn">Войти</string>
    <string name="register">Зарегестрироваться</string>
    <string name="rent">Аренда автомобилей</string>
    <string name="sub_rent">Открой для себя удобный и доступный способ передвижения</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">Избранное</string>
    <string name="title_notifications">Настройки</string>
    <string name="settings">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>