<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">


    <ImageView
        android:id="@+id/connect"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/disconnect"
        app:srcCompat="@drawable/connect" />

    <TextView
        android:id="@+id/noConnection"
        android:layout_width="239dp"
        android:layout_height="82dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:lineSpacingExtra="16sp"
        android:text="@string/no_connection"
        android:textAlignment="center"
        android:textColor="#1A1A1A"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/pleaseRetry"
        android:layout_width="300dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="160dp"
        android:text="@string/please_retry"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="#1A1A1A" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRetry"
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:backgroundTint="#2A1246"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/retry"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        />


</LinearLayout>