<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ImageView
        android:id="@+id/start_logo2"
        android:layout_width="343dp"
        android:layout_height="343dp"
        android:contentDescription="@string/start_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/sub_label2"
        android:layout_width="340dp"
        android:layout_height="20dp"
        android:layout_marginBottom="596dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sub_label"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_label2" />

    <TextView
        android:id="@+id/start_label2"
        android:layout_width="340dp"
        android:layout_height="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label"
        android:textColor="#2A1246"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="#2A1246"
        android:fontFamily="@font/montserrat"
        android:text="@string/logIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_logo2"
        app:layout_constraintVertical_bias="0.103" />

    <Button
        android:id="@+id/button2"
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:background="#2A1246"
        android:fontFamily="@font/montserrat"
        android:textColor="#344054"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logIn"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>